--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,31 @@
+<h1>Create a Team and Heroes!</h1>
 
+<form method="POST" action="/teams">
+	<br></br>
+	Team Name: <input type="text" name="team[name]">
+	Team Motto: <input type="text" name="team[motto]">
+	<br></br>
+
+	<label>Hero 1</label>
+	<br></br>
+	Hero's Name: <input type="text" name="team[members][][name]" id="member1_name">
+	Hero's Power: <input type="text" name="team[members][][power]" id="member1_power">
+	Hero's Biography: <input type="text" name="team[members][][biography]" id="member1_bio">
+	<br></br>
+
+	<label>Hero 2</label>
+	<br></br>
+	Hero's Name: <input type="text" name="team[members][][name]" id="member2_name">
+	Hero's Power: <input type="text" name="team[members][][power]" id="member2_power">
+	Hero's Biography: <input type="text" name="team[members][][biography]" id="member2_bio">
+	<br></br>
+
+	<label>Hero 3</label>
+	<br></br>
+	Hero's Name: <input type="text" name="team[members][][name]" id="member3_name">
+	Hero's Power: <input type="text" name="team[members][][power]" id="member3_power">
+	Hero's Biography: <input type="text" name="team[members][][biography]" id="member3_bio">
+	<br></br>
+
+	<input id="submit" type="submit">
+</form>
