--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,12 @@
+<h1>Team Name: <%= @team.name %></h1>
 
+<h2>Team Motto: <%= @team.motto %></h2>
+<br></br>
 
-
+<% @heroes.each do |hero| %>
+	<h2>Hero Name: <%= hero.name %></h2>
+	<br></br>
+	<h3>Hero Power: <%= hero.power %></h3>
+	<h3>Hero Biography: <%= hero.biography %></h3>
+	<br></br>
+<% end %>
